[package]
name = "kr"
version = "0.2.0"
edition = "2021"
description = "Rust development utility library"
license = "MIT"
repository = "https://github.com/noble-gase/kr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kr"
path = "src/lib.rs"

[features]
axum = []
salvo = []

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
const-hex = "1.13"
openssl = { version = "0.10", features = ["vendored"] }
digest = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
uuid = { version = "1.15", features = ["v4"] }
time = { version = "0.3", features = [
    "macros",
    "local-offset",
    "formatting",
    "parsing",
] }
redis = { version = "0.31", features = [
    "r2d2",
    "cluster",
    "cluster-async",
    "tokio-comp",
] }
r2d2 = "0.8"
bb8 = "0.9"
serde = { version = "1.0", features = ["derive"] }
