[package]
name = "kr-core"
description = "Core of kr, the rust development toolkit. Not intended to be used directly."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kr_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
const-hex = "1.13"
openssl = { version = "0.10", features = ["vendored"] }
digest = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
uuid = { version = "1.15", features = ["v4"] }
time = { version = "0.3", features = [
    "macros",
    "local-offset",
    "formatting",
    "parsing",
] }
redis = { version = "0.32", features = [
    "r2d2",
    "cluster",
    "cluster-async",
    "tokio-comp",
] }
r2d2 = "0.8"
bb8 = "0.9"
bon = "3.6"
serde = { version = "1.0", features = ["derive"] }
