[package]
name = "kr-macros"
description = "Macros for kr, the rust development utility library. Not intended to be used directly."
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kr_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
