[package]
name = "kr-macros"
description = "Macros of kr, the rust development toolkit. Not intended to be used directly."
version = "0.5.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kr_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
